# organize-your-studies

./: .env.example  .env.local  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
database/: Datenbankschema  README.md  docker-compose.yml  schema.sql
java-server/: Dockerfile  build.gradle  build.gradle.kts  gradlew.bat  settings.gradle.kts
java-server/config/checkstyle/: checkstyle_kit_2025.xml
java-server/gradle/wrapper/: gradle-wrapper.properties
java-server/src/main/java/de/pse/oys/: Main.java
java-server/src/main/resources/: application.properties
java-server/src/test/java/de/pse/oys/: BaseIntegrationTest.java  GlobalExceptionHandlerTest.java  MainTest.java  SmokeTest.java  TestDomainFactory.java  TestUser.java  TestUserFactory.java
java-server/src/test/resources/: application-integration.properties  application-test.properties
kotlin-client/: settings.gradle.kts
kotlin-client/app/: build.gradle.kts
kotlin-client/app/src/main/: AndroidManifest.xml
kotlin-client/app/src/main/res/drawable/: ic_launcher_foreground.xml
kotlin-client/app/src/main/res/values/: strings.xml  themes.xml
kotlin-client/app/src/main/res/values-de/: strings.xml
kotlin-client/gradle/: libs.versions.toml
kotlin-client/gradle/wrapper/: gradle-wrapper.properties
python-microservice/: Dockerfile  Microservice.py  pyproject.toml  requirements.txt
python-microservice/Microservice/: Microservice.py  input.json  output.json  test_microservice.py
python-microservice/tests/: example_input.json  test_microservice.py
(+257 files in other folders)
