[project]
name = "organize-your-studies"
version = "0.1.0"
description = ""
authors = [
    {name = "Nardi Hyseni",email = "uhxch@student.kit.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "ortools (>=9.15.6755,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
